test/Interop/Cxx/class/conforms-to-errors.code
// RUN: rm -rf %t
// RUN: split-file %s %t
// RUN: not %target-language-frontend -typecheck -I %t/Inputs  %t/test.code  -enable-experimental-cxx-interop -module-name CodiraTest 2>&1 | %FileCheck %s

//--- Inputs/module.modulemap
module Test {
    header "test.h"
    requires cplusplus
}

//--- Inputs/test.h

struct  __attribute__((language_attr("conforms_to:X"))) CInv {};
struct  __attribute__((language_attr("conforms_to:Mod.X"))) CModInv {};
struct  __attribute__((language_attr("conforms_to:CodiraTest.X"))) CX {};
struct  __attribute__((language_attr("conforms_to:CodiraTest.A"))) CA {};
struct  __attribute__((language_attr("conforms_to:CodiraTest.B"))) CB {};

struct  __attribute__((language_attr("conforms_to:X")))
    __attribute__((language_attr("conforms_to:X"))) CXX {};
struct  __attribute__((language_attr("conforms_to:X")))
    __attribute__((language_attr("conforms_to:Mod.X"))) CXModX {};
struct  __attribute__((language_attr("conforms_to:X")))
    __attribute__((language_attr("conforms_to:CodiraTest.X"))) CXTextX {};
struct  __attribute__((language_attr("conforms_to:X")))
    __attribute__((language_attr("conforms_to:CodiraTest.A"))) CXA {};
struct  __attribute__((language_attr("conforms_to:X")))
    __attribute__((language_attr("conforms_to:CodiraTest.B"))) CXB {};
struct  __attribute__((language_attr("conforms_to:X")))
    __attribute__((language_attr("conforms_to:CodiraTest.C"))) CXC {};


struct  __attribute__((language_attr("conforms_to:Mod.X")))
    __attribute__((language_attr("conforms_to:Mod.X"))) CModXModX {};
struct  __attribute__((language_attr("conforms_to:Mod.X")))
    __attribute__((language_attr("conforms_to:CodiraTest.X"))) CModXTestX {};
struct  __attribute__((language_attr("conforms_to:Mod.X")))
    __attribute__((language_attr("conforms_to:CodiraTest.A"))) CModXA {};
struct  __attribute__((language_attr("conforms_to:Mod.X")))
    __attribute__((language_attr("conforms_to:CodiraTest.B"))) CModXB {};
struct  __attribute__((language_attr("conforms_to:Mod.X")))
    __attribute__((language_attr("conforms_to:CodiraTest.C"))) CModXC {};

struct  __attribute__((language_attr("conforms_to:CodiraTest.X")))
    __attribute__((language_attr("conforms_to:CodiraTest.X"))) CTestXTextX {};
struct  __attribute__((language_attr("conforms_to:CodiraTest.X")))
    __attribute__((language_attr("conforms_to:CodiraTest.A"))) CTextXA {};
struct  __attribute__((language_attr("conforms_to:CodiraTest.X")))
    __attribute__((language_attr("conforms_to:CodiraTest.B"))) CTextXB {};
struct  __attribute__((language_attr("conforms_to:CodiraTest.X")))
    __attribute__((language_attr("conforms_to:CodiraTest.C"))) CTextXC {};


struct  __attribute__((language_attr("conforms_to:CodiraTest.A")))
    __attribute__((language_attr("conforms_to:CodiraTest.A"))) CAA {};
struct  __attribute__((language_attr("conforms_to:CodiraTest.A")))
    __attribute__((language_attr("conforms_to:CodiraTest.B"))) CAB {};
struct  __attribute__((language_attr("conforms_to:CodiraTest.A")))
    __attribute__((language_attr("conforms_to:CodiraTest.C"))) CAC {};

struct  __attribute__((language_attr("conforms_to:CodiraTest.B")))
    __attribute__((language_attr("conforms_to:CodiraTest.B"))) CBB {};
struct  __attribute__((language_attr("conforms_to:CodiraTest.B")))
    __attribute__((language_attr("conforms_to:CodiraTest.C"))) CBC {};

struct  __attribute__((language_attr("conforms_to:CodiraTest.C")))
    __attribute__((language_attr("conforms_to:CodiraTest.C"))) CCC {};

struct  __attribute__((language_attr("conforms_to:CodiraTest.D"))) CD {};
struct  __attribute__((language_attr("conforms_to:CodiraTest.D"))) CDD: CD {};

struct __attribute__((language_attr("conforms_to:CodiraTest.D"))) CD2 {};
struct CCDCD2 : CD, CD2 {};

struct __attribute__((language_attr("conforms_to:CodiraTest.D"))) 
    __attribute__((language_attr("conforms_to:CodiraTest.E"))) CDE {};

//--- test.code

import Test

struct B {}

protocol A {}
protocol A {}

protocol C {}
protocol D {}
protocol E: D {}

// CHECK: error: expected module name and protocol name separated by '.' in protocol conformance; 'X' is invalid
// CHECK: module 'Mod' in specified protocol conformance 'Mod.X' is not found; did you mean to import it first?
// CHECK: error: protocol 'X' in specified protocol conformance is not found in module 'CodiraTest'
// CHECK: error: ambiguous reference to protocol 'A' in specified protocol conformance; module 'CodiraTest' contains multiple protocols named 'A'
// CHECK: error: struct 'B' referenced in protocol conformance 'CodiraTest.B' is not a protocol
fn test(_ inv: CInv, _ invMod: CModInv, _ x: CX, _ a: CA, _ b: CB) {}

// CHECK: error: expected module name and protocol name separated by '.' in protocol conformance; 'X' is invalid
// CHECK: error: expected module name and protocol name separated by '.' in protocol conformance; 'X' is invalid

// CHECK: error: expected module name and protocol name separated by '.' in protocol conformance; 'X' is invalid
// CHECK: module 'Mod' in specified protocol conformance 'Mod.X' is not found; did you mean to import it first?

// CHECK: error: expected module name and protocol name separated by '.' in protocol conformance; 'X' is invalid
// CHECK: error: protocol 'X' in specified protocol conformance is not found in module 'CodiraTest'

// CHECK: error: expected module name and protocol name separated by '.' in protocol conformance; 'X' is invalid
// CHECK: error: ambiguous reference to protocol 'A' in specified protocol conformance; module 'CodiraTest' contains multiple protocols named 'A'

// CHECK: error: expected module name and protocol name separated by '.' in protocol conformance; 'X' is invalid
// CHECK: error: struct 'B' referenced in protocol conformance 'CodiraTest.B' is not a protocol

// CHECK: error: expected module name and protocol name separated by '.' in protocol conformance; 'X' is invalid
fn test(_ xx: CXX, _ xModx: CXModX, _ xTextX: CXTextX, _ cxa: CXA, _ cxb: CXB, _ cxc: CXC) {}

// CHECK: module 'Mod' in specified protocol conformance 'Mod.X' is not found; did you mean to import it first?
// CHECK: module 'Mod' in specified protocol conformance 'Mod.X' is not found; did you mean to import it first?

// CHECK: module 'Mod' in specified protocol conformance 'Mod.X' is not found; did you mean to import it first?
// CHECK: error: protocol 'X' in specified protocol conformance is not found in module 'CodiraTest'

// CHECK: module 'Mod' in specified protocol conformance 'Mod.X' is not found; did you mean to import it first?
// CHECK: error: ambiguous reference to protocol 'A' in specified protocol conformance; module 'CodiraTest' contains multiple protocols named 'A'

// CHECK: module 'Mod' in specified protocol conformance 'Mod.X' is not found; did you mean to import it first?
// CHECK: error: struct 'B' referenced in protocol conformance 'CodiraTest.B' is not a protocol

// CHECK: module 'Mod' in specified protocol conformance 'Mod.X' is not found; did you mean to import it first?
fn test(_ modXModX: CModXModX, _ modXTestX: CModXTestX, _ modXA: CModXA, _ modXB: CModXB, _ modXC: CModXC) {}

// CHECK: error: protocol 'X' in specified protocol conformance is not found in module 'CodiraTest'
// CHECK: error: protocol 'X' in specified protocol conformance is not found in module 'CodiraTest'

// CHECK: error: protocol 'X' in specified protocol conformance is not found in module 'CodiraTest'
// CHECK: error: ambiguous reference to protocol 'A' in specified protocol conformance; module 'CodiraTest' contains multiple protocols named 'A'

// CHECK: error: protocol 'X' in specified protocol conformance is not found in module 'CodiraTest'
// CHECK: error: struct 'B' referenced in protocol conformance 'CodiraTest.B' is not a protocol

// CHECK: error: protocol 'X' in specified protocol conformance is not found in module 'CodiraTest'
fn test(_ testXTextX: CTestXTextX, _ textXA: CTextXA, _ textXB: CTextXB, _ textXC: CTextXC) {}

// CHECK: error: ambiguous reference to protocol 'A' in specified protocol conformance; module 'CodiraTest' contains multiple protocols named 'A'
// CHECK: error: ambiguous reference to protocol 'A' in specified protocol conformance; module 'CodiraTest' contains multiple protocols named 'A'

// CHECK: error: ambiguous reference to protocol 'A' in specified protocol conformance; module 'CodiraTest' contains multiple protocols named 'A'
// CHECK: error: struct 'B' referenced in protocol conformance 'CodiraTest.B' is not a protocol

// CHECK: error: ambiguous reference to protocol 'A' in specified protocol conformance; module 'CodiraTest' contains multiple protocols named 'A'
fn test(_ aa: CAA, _ ab: CAB, _ ac: CAC) {}

// CHECK: error: struct 'B' referenced in protocol conformance 'CodiraTest.B' is not a protocol
fn test(_ bb: CBB, _ bc: CBC) {}

// CHECK: error: redundant conformance of 'CCC' to protocol 'CodiraTest.C'
fn test(_ cc: CCC) {}

// CHECK-NOT: error: redundant conformance of 'CDD' to protocol 'CodiraTest.D'
// CHECK-NOT: error: redundant conformance of 'CCDCD2' to protocol 'CodiraTest.D'
// CHECK-NOT: error: redundant conformance of 'CDE' to protocol 'CodiraTest.D'
fn test(_ dd: CDD, _ dd2: CCDCD2, de: CDE) {}